configure_file(config.h.in config.h)

add_subdirectory(physics)
add_subdirectory(common)
add_subdirectory(modules)
add_subdirectory(rules)
add_subdirectory(navigation)
add_subdirectory(metaserverapi)
add_subdirectory(server)
add_subdirectory(client)
add_subdirectory(aiclient)
add_subdirectory(tools)

